# ecomp

./: UGEB_corrected.csv  UGEB_full.csv  UGEB_select_test.csv  __init__.py  ecomp_testing.ipynb  merged_full.csv  merged_idcx_ugeb_sel3_full.csv  merged_trimmed.csv  pyproject.toml  requirements.txt  sel3_catalog.csv  setup.py  ugeb_catalog.csv
ecomp/: __init__.py  ecomp.py
