[project]
name = "ecomp"
description = "Catalog comparison tool"
version = "0.1"
authors = [
    { name = "Brian Pope", email = "brian.pope.4@us.af.mil" }
]
dynamic = ["dependencies"]

requires-python = ">=3.8"
[tool.setuptools.dynamic]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
